# feeluown-new-ui

./: .gitignore  README.md  pyproject.toml
fuo_new_ui/: __init__.py  __main__.py  api.py  app.py  auth.py  config.py  const.py  context.py  daemon.py  qml_app.py
fuo_new_ui/gui/context/: player.py
fuo_new_ui/gui/qml/: main.qml
fuo_new_ui/gui/qml/components/: AppToolTip.qml  FullPlayer.qml  Player.qml  Setting.qml  Tray.qml
fuo_new_ui/model/: config.py
