[tool.poetry]
name = "fuo_new_ui"
version = "0.1.0"
description = ""
authors = ["Bruce Zhang <zttt183525594@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pyside6 = "^6.6.0"
feeluown = { git = "https://github.com/feeluown/FeelUOwn.git" }
pydantic = "^2.4.2"
requests = "^2.31.0"
browser-cookie3 = {version = "^0.19.1", optional = true}

[tool.poetry.extras]
cookie = ["browser-cookie3"]

[tool.poetry.group.dev.dependencies]
sanic = "^23.6.0"
websockets = "^12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
feeluown-gui = "fuo_new_ui.__main__:main"
